--- a/mingw-w64-quazip/PKGBUILD
+++ b/mingw-w64-quazip/PKGBUILD
@@ -35,6 +35,8 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
       -DQUAZIP_QT_MAJOR_VERSION=5 \
+      -DQUAZIP_BZIP2=OFF \
+      -DQUAZIP_FETCH_LIBS=OFF \
       -S "${_realname}-${pkgver}" \
       -B "build-qt5-${MSYSTEM}"
 
@@ -48,6 +50,8 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
       -DQUAZIP_QT_MAJOR_VERSION=6 \
+      -DQUAZIP_BZIP2=OFF \
+      -DQUAZIP_FETCH_LIBS=OFF \
       -S "${_realname}-${pkgver}" \
       -B "build-qt6-${MSYSTEM}"
 
